# udp-packet-recovery

./: CMakeLists.txt  CMakePresets.json  README.md
include/lib/: bytes2long.h  log.h  socket_helpers.h  str2decimal.h
include/main/: config.h  getopt_loop.h  globals.h  init_globals.h  packet_helpers.h  packet_types.h  receive_handler.h  send_loop.h
include/main/packet_preparators/: generic_prepare_packet.h  prepare_send_lost_packet_nums_packet.h  prepare_send_packet_count_packet.h  prepare_send_timeout_packet.h
include/main/receive_handlers/: receive_signal_handler.h  recv_receive_lost_packet_nums.h  recv_receive_packet_count.h  recv_receive_packets.h  recv_receive_timeout.h  recv_send_lost_packet_nums.h  recv_send_timeout.h
include/main/send_handlers/: safe_send_packet.h  send_handlers_loop.h  send_receive_lost_packet_nums.h  send_send_lost_packet_nums.h  send_send_packet_count.h  send_send_packets.h  send_send_timeout.h
include/main/utils/: bytes2decimal.h  file_helpers.h  log.h  nanos.h  packet_helpers.h  socket_helpers.h  timespec_helpers.h
src/lib/: bytes2decimal.c  bytes2long.c  file_helpers.c  log.c  socket_helpers.c  str2decimal.c
src/main/: getopt_loop.c  globals.c  init_globals.c  main.c  packet_helpers.c  receive_handler.c  send_loop.c
src/main/packet_preparators/: generic_prepare_packet.c  prepare_send_lost_packet_nums_packet.c  prepare_send_packet_count_packet.c  prepare_send_timeout_packet.c
src/main/receive_handlers/: receive_handler.c  receive_signal_handler.c  recv_receive_lost_packet_nums.c  recv_receive_packet_count.c  (+4 more)
(+15 files in other folders)
